switched from flexbox to grid display for the gameboard grid. fixed the issue of y axis ships misalignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -226,7 +226,6 @@ p {
 #gameboardSection {
   display: flex;
   gap: 1rem;
-  height: 70%;
   width: 100%;
 }
 
@@ -266,7 +265,6 @@ p {
 }
 #y-axis-grid-container {
   display: flex;
-  height: 100%;
 }
 
 #y-axis {
@@ -289,11 +287,13 @@ p {
 #setup-gameboard .y-axis {
   letter-spacing: 2.85rem;
 }
+
 .gameboard-grid {
   z-index: 0;
   position: relative;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
   height: 100%;
   width: 100%;
   border: 2px solid black;
@@ -310,7 +310,7 @@ p {
   user-select: none;
   position: relative;
   border: 2px solid black;
-  flex: 1 1 10%;
+  aspect-ratio: 1 / 1;
   transition: background-color 0.3s ease, transform 0.3s ease,
     box-shadow 0.3s ease;
 }
@@ -538,7 +538,6 @@ p {
 }
 
 .resultImg {
-  border-radius: 50%;
   height: 5rem;
 }
 
